--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 .gray { background-color:  #bdc3c7; }
 .deep-gray { background-color:  #2c3e50; }
+.green { background-color: green; }
 #key1 { margin-left: 4vw; }
 #key3 { margin-left: 4vw; }
 #key4 { margin-left: 7vw; }
