--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,9 +1,10 @@
 .gray { background-color:  #bdc3c7; }
 .deep-gray { background-color:  #2c3e50; }
 .green { background-color: green; }
-#key1 { margin-left: 4vw; }
-#key3 { margin-left: 4vw; }
-#key4 { margin-left: 7vw; }
+#key0 { margin: 0 4vw 1vw 0; }
+#key1 { margin: 0 0 1vw 3vw; }
+#key2 { margin: 0 2vw 1vw 5vw; }
+#key3 { margin: 0 6vw 1vw 8vw; }
 
 #Bayan {
     width: 80vw;
@@ -16,6 +17,7 @@
 .key {
     width: 6vw;
     height: 6vw;
+    margin-left: 0;
     margin-right: 0.7vw;
     border-radius: 0.5vw;
         -moz-border-radius: 1vw; /* Old Firefox */
