--- a/src/css/index.css
+++ b/src/css/index.css
@@ -11,6 +11,8 @@
     height: 28vw;
     margin: 0 auto;
     display: flex;
+    margin-top: 5vw;
+    margin-bottom: 5vw;
     flex-direction: column;
 }
 
