--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,17 +9,22 @@
 #Bayan {
     display: flex;
     flex-direction: column;
+    /*position: absolute;*/
 }
 
 body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
-  }
+}
 
 main {
     flex: 1 0 auto;
     margin: 0 auto;
+    /*position: relative;*/
+    /*display: flex;
+    justify-content: center;
+    align-content: center;*/
 }
 
 .key {
