--- a/src/css/piano.css
+++ b/src/css/piano.css
@@ -4,6 +4,7 @@
 
 #Piano {
     display: block;
+    margin: 0 auto;
     /*display: flex;
     justify-content: center;
     align-content: center;*/
